--- a/index.html
+++ b/index.html
@@ -11,14 +11,30 @@
       margin: 0;
       background-color: #1b1b1b;
       color: white;
+      font-family: 'Courier New', Courier, monospace;
     }
-  </style>
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    </style>
   <script src="p5.min.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
+  <!-- <script src="../addons/p5.sound.js"></script> -->
 </head>
 
 <body>
+
+  <main>
+    <h1>Generative typography</h1>
+
+    <canvas id="canvas"></canvas>
+
+    <label for="text">Text</label>
+    <input id="text" type="text" value="Generative typography"></input>
+  </main>
+
 
 </body>
 
